[gd_scene load_steps=7 format=3 uid="uid://17bfu5jt5m4n"]

[ext_resource type="Script" uid="uid://2lv8lj4tpjn3" path="res://player/player_v1.gd" id="1_44s3w"]
[ext_resource type="AudioStream" uid="uid://b4qjh6v36ldc2" path="res://resources/sounds/freesound/38872__swuing__footstep-carpet.wav" id="2_pg5kf"]
[ext_resource type="Texture2D" uid="uid://cborqslv0ubl3" path="res://resources/misc_textures/d_shadow_1.png" id="3_ndily"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x6jku"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ns088"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_flttd"]
length = 0.25

[node name="PlayerV1" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_44s3w")

[node name="HUD" type="Node3D" parent="."]

[node name="interact_text" type="RichTextLabel" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -113.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 48
text = "interact"

[node name="interact_cooldown" type="Timer" parent="HUD"]
wait_time = 1.25
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_x6jku")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="interact_cast" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -1.5)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 0, 1, 1)

[node name="ladder_detection" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ladder_detection"]
shape = SubResource("CylinderShape3D_ns088")

[node name="footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pg5kf")
volume_db = -10.0

[node name="seperation_raycast" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.75, -0.5)
shape = SubResource("SeparationRayShape3D_flttd")

[node name="Drop_Shadow" type="Decal" parent="."]
top_level = true
size = Vector3(3, 3, 3)
texture_albedo = ExtResource("3_ndily")
modulate = Color(0, 0, 0, 1)

[node name="D_Shad_Check" type="RayCast3D" parent="."]
target_position = Vector3(0, -10, 0)

[node name="step_audio_detect" type="RayCast3D" parent="."]
collision_mask = 128
collide_with_areas = true
collide_with_bodies = false

[connection signal="timeout" from="HUD/interact_cooldown" to="." method="_on_interact_cooldown_timeout"]
